# BlackHole

./: .gitignore  .gitmodules  BlackHole.sln  BlackHole.vcxproj  BlackHole.vcxproj.filters  CMakeLists.txt  GenerateProjects.bat  README.md  imgui.ini  premake5.lua
BlackHole/: BlackHole.vcxproj  BlackHole.vcxproj.filters  CMakeLists.txt
BlackHole-Editor/: CMakeLists.txt
BlackHole-Editor/src/: BlackHoleEditorApp.cpp
BlackHole-Editor/src/BlackHole-Editor/: EditorLayer.cpp  EditorLayer.h
BlackHole/src/: BlackHole.h  BlackHoleApp.cpp  bhpch.h
BlackHole/src/BlackHole/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  Filesystem.cpp  Filesystem.h  Input.cpp  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timer.h  Timestep.h  Window.cpp  Window.h
BlackHole/src/BlackHole/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
BlackHole/src/BlackHole/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
BlackHole/src/BlackHole/Renderer/: Camera.cpp  CameraController.cpp  CameraController.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h
BlackHole/src/Core/: Log.cpp  Log.h
BlackHole/src/Core/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
BlackHole/src/Platform/OpenGL/: Buffer.cpp  Buffer.h  Context.cpp  Cubemap.cpp  Cubemap.h  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
assets/models/BarberShopChair_01_8k/: BarberShopChair_01_8k.fbx
assets/models/BarberShopChair_01_8k/textures/: BarberShopChair_01_metallic_8k.exr
assets/models/primitives/cube/: default.mtl
assets/shaders/: HDRtoLDR.fs.glsl  PointLIghtSource.glsl  bloom.fs.glsl  gaussianBlur.fs.glsl  model.fs.glsl  model.glsl  model.vs.glsl  modelNormals.glsl  outline.glsl  screenSquad.fs.glsl  screenSquad.glsl  screenSquad.vs.glsl  shadowMap.vs.glsl  skybox.fs.glsl  skybox.glsl  solidColor.glsl  transparentCheck.glsl  triangleShader.glsl
assets/shaders/Deferred shading/: geometryPass.fs.glsl  geometryPass.vs.glsl  lightingMap.fs.glsl  lightingPass.fs.glsl  lightingPass.vs.glsl  lightningPass.fs.glsl
bin-int/Debug-windows-x86_64/BlackHole/: BlackHole.exe.recipe  vc143.idb
bin-int/Debug-windows-x86_64/BlackHole/BlackHole.tlog/: BlackHole.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/BlackHole/: BlackHole.exe.recipe  vc143.idb
bin-int/Debug-x64/BlackHole/BlackHole.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Release-windows-x86_64/BlackHole/: BlackHole.exe.recipe
bin-int/Release-windows-x86_64/BlackHole/BlackHole.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: BlackHoleApp.cpp  EntryPoint.cpp  bhpch.cpp  bhpch.h
src/BlackHole/Core/: Application.cpp  Application.h  Base.h  Core.h  Filesystem.cpp  Filesystem.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.cpp  Window.h
src/BlackHole/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/BlackHole/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/BlackHole/Layers/: EditorLayer.cpp  EditorLayer.h  WorldLayer.cpp  WorldLayer.h
src/BlackHole/OpenGL/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  Cubemap.cpp  Cubemap.h  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture2D.cpp  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
src/BlackHole/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLContext.cpp  OpenGLContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureManager.cpp  TextureManager.h
src/Core/: Application.cpp  Application.h  Core.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.cpp  Window.h
src/Core/Events/: Event.h
src/Events/: Event.h  KeyEvent.h  MouseEvent.h
